[package]
name = "rusty-blink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0-rc.2"
critical-section = "1.1.0"

[dependencies.stm32f4]
features = ["stm32f429", "rt"]
version = "0.15.1"

[dependencies.rtt-target]
version = "0.3.1"
features = ["cortex-m"]